--- a/css/style.css
+++ b/css/style.css
@@ -10524,3 +10524,16 @@ padding: 10px 0px;
 .card-body-bg {
   background-color: #ffefb7;
 }
+
+.tel-font {
+  font-size: larger;
+}
+
+.tel-font-2 {
+  color: black;
+  font-size: x-large;
+}
+
+.rond {
+  border-radius: 10%;
+}
